// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatList /> renders correctly 1`] = `
<a
  className="MuiButtonBase-root-80 MuiListItem-root-68 MuiListItem-default-71 MuiListItem-gutters-76 MuiListItem-button-77"
  href="/chat/1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  Avatar
  <div
    className="MuiListItemText-root-83"
  >
    <span
      className="MuiTypography-root-89 MuiTypography-subheading-96 MuiListItemText-primary-86"
    >
      test
    </span>
    <p
      className="MuiTypography-root-89 MuiTypography-body1-98 MuiTypography-colorTextSecondary-122 MuiListItemText-secondary-87"
    >
      2 days ago
    </p>
  </div>
  <span
    className="MuiTouchRipple-root-124"
  />
</a>
`;

exports[`<ChatList /> renders correctly active 1`] = `
<a
  className="MuiButtonBase-root-80 MuiListItem-root-68 MuiListItem-default-71 MuiListItem-gutters-76 MuiListItem-button-77 ChatListItem-activeItem-66"
  href="/chat/1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  Avatar
  <div
    className="MuiListItemText-root-83"
  >
    <span
      className="MuiTypography-root-89 MuiTypography-subheading-96 MuiListItemText-primary-86"
    >
      test
    </span>
    <p
      className="MuiTypography-root-89 MuiTypography-body1-98 MuiTypography-colorTextSecondary-122 MuiListItemText-secondary-87"
    >
      2 days ago
    </p>
  </div>
  <span
    className="MuiTouchRipple-root-124"
  />
</a>
`;

exports[`<ChatList /> renders correctly disabled 1`] = `
<a
  className="MuiButtonBase-root-80 MuiButtonBase-disabled-81 MuiListItem-root-68 MuiListItem-default-71 MuiListItem-gutters-76 MuiListItem-disabled-74 MuiListItem-button-77"
  href="/chat/1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="-1"
>
  Avatar
  <div
    className="MuiListItemText-root-83"
  >
    <span
      className="MuiTypography-root-89 MuiTypography-subheading-96 MuiListItemText-primary-86"
    >
      test
    </span>
    <p
      className="MuiTypography-root-89 MuiTypography-body1-98 MuiTypography-colorTextSecondary-122 MuiListItemText-secondary-87"
    >
      2 days ago
    </p>
  </div>
</a>
`;
